syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// {where the generated code will be placed}/{generated code package name} 
option go_package = "api/user_v1;user_v1";

service UserV1 {
  rpc Create(UserRegisterRequest) returns(IdResponse);
  rpc Get(IdRequest) returns(UserResponse);
  rpc Update(UserUpdateRequest) returns(google.protobuf.Empty);
  rpc Delete(IdRequest) returns(google.protobuf.Empty);
}

enum UserRoleEnum {
  USER = 0;
  ADMIN = 1;
}

message UserRegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  UserRoleEnum role = 5;
}

message UserUpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  UserRoleEnum role = 4;
}

message IdRequest {
  int64 Id = 1;
}

message IdResponse {
  int64 Id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRoleEnum role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
